# agent-agora

./: .env.example  README.md  pyproject.toml
agent_agora/: __init__.py  agent_runner.py  database.py  llm_client.py  main.py  models.py  personas.py  scheduler.py  template_filters.py
agent_agora/templates/: index.html
agent_agora/templates/partials/: agent_list.html  feed.html  post_card.html  post_list.html
tests/: __init__.py  test_agent_runner.py  test_database.py  test_personas.py
