[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent_agora"
version = "0.1.0"
description = "A local web application that simulates a Reddit-like social network populated by autonomous AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Agent Agora Contributors" }
]
keywords = ["ai", "agents", "simulation", "multi-agent", "llm", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-agora = "agent_agora.main:run"

[project.urls]
Homepage = "https://github.com/example/agent_agora"
Repository = "https://github.com/example/agent_agora"
Issues = "https://github.com/example/agent_agora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_agora*"]

[tool.setuptools.package-data]
agent_agora = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
